// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error should render cancelled error 1`] = `
<form
  className="file-upload-form"
  onSubmit={[Function]}
>
  <input
    accept=".pdf"
    disabled={false}
    hidden="hidden"
    id="c1511c73-07b9-44cd-a4bd-01758515acb5"
    onChange={[Function]}
    onClick={[Function]}
    type="file"
  />
  <label
    className="button button--grey button--norm-grey"
    htmlFor="c1511c73-07b9-44cd-a4bd-01758515acb5"
  >
    Choose File
  </label>
  <div
    className="file-name"
  >
    <p>
      File upload cancelled
    </p>
  </div>
  <button
    className="button button--grey button--norm-grey"
    disabled={false}
    onClick={[Function]}
  >
    Upload
  </button>
</form>
`;

exports[`error should render default error 1`] = `
<form
  className="file-upload-form"
  onSubmit={[Function]}
>
  <input
    accept=".pdf"
    disabled={false}
    hidden="hidden"
    id="c1511c73-07b9-44cd-a4bd-01758515acb5"
    onChange={[Function]}
    onClick={[Function]}
    type="file"
  />
  <label
    className="button button--grey button--norm-grey"
    htmlFor="c1511c73-07b9-44cd-a4bd-01758515acb5"
  >
    Choose File
  </label>
  <div
    className="file-name"
  >
    <p>
      File upload failed
    </p>
  </div>
  <button
    className="button button--grey button--norm-grey"
    disabled={false}
    onClick={[Function]}
  >
    Upload
  </button>
</form>
`;

exports[`error should render error when no file is selected 1`] = `
<form
  className="file-upload-form"
  onSubmit={[Function]}
>
  <input
    accept=".pdf"
    disabled={false}
    hidden="hidden"
    id="c1511c73-07b9-44cd-a4bd-01758515acb5"
    onChange={[Function]}
    onClick={[Function]}
    type="file"
  />
  <label
    className="button button--grey button--norm-grey"
    htmlFor="c1511c73-07b9-44cd-a4bd-01758515acb5"
  >
    Choose File
  </label>
  <div
    className="file-name"
  >
    <p>
      No file chosen
    </p>
  </div>
  <button
    className="button button--grey button--norm-grey"
    disabled={false}
    onClick={[Function]}
  >
    Upload
  </button>
</form>
`;

exports[`error should render unauthorized error 1`] = `
<form
  className="file-upload-form"
  onSubmit={[Function]}
>
  <input
    accept=".pdf"
    disabled={false}
    hidden="hidden"
    id="c1511c73-07b9-44cd-a4bd-01758515acb5"
    onChange={[Function]}
    onClick={[Function]}
    type="file"
  />
  <label
    className="button button--grey button--norm-grey"
    htmlFor="c1511c73-07b9-44cd-a4bd-01758515acb5"
  >
    Choose File
  </label>
  <div
    className="file-name"
  >
    <p>
      Not allowed to upload file!
    </p>
  </div>
  <button
    className="button button--grey button--norm-grey"
    disabled={false}
    onClick={[Function]}
  >
    Upload
  </button>
</form>
`;

exports[`file name should change file name back to no file chosen if no file selected 1`] = `
<form
  className="file-upload-form"
  onSubmit={[Function]}
>
  <input
    accept=".pdf"
    disabled={false}
    hidden="hidden"
    id="c1511c73-07b9-44cd-a4bd-01758515acb5"
    onChange={[Function]}
    onClick={[Function]}
    type="file"
  />
  <label
    className="button button--grey button--norm-grey"
    htmlFor="c1511c73-07b9-44cd-a4bd-01758515acb5"
  >
    Choose File
  </label>
  <div
    className="file-name"
  >
    <p>
      fileName
    </p>
  </div>
  <button
    className="button button--grey button--norm-grey"
    disabled={false}
    onClick={[Function]}
  >
    Upload
  </button>
</form>
`;

exports[`file name should change file name back to no file chosen if no file selected 2`] = `
<form
  className="file-upload-form"
  onSubmit={[Function]}
>
  <input
    accept=".pdf"
    disabled={false}
    hidden="hidden"
    id="c1511c73-07b9-44cd-a4bd-01758515acb5"
    onChange={[Function]}
    onClick={[Function]}
    type="file"
  />
  <label
    className="button button--grey button--norm-grey"
    htmlFor="c1511c73-07b9-44cd-a4bd-01758515acb5"
  >
    Choose File
  </label>
  <div
    className="file-name"
  >
    <p>
      No file chosen
    </p>
  </div>
  <button
    className="button button--grey button--norm-grey"
    disabled={false}
    onClick={[Function]}
  >
    Upload
  </button>
</form>
`;

exports[`file name should change file name on selecting file 1`] = `
<form
  className="file-upload-form"
  onSubmit={[Function]}
>
  <input
    accept=".pdf"
    disabled={false}
    hidden="hidden"
    id="c1511c73-07b9-44cd-a4bd-01758515acb5"
    onChange={[Function]}
    onClick={[Function]}
    type="file"
  />
  <label
    className="button button--grey button--norm-grey"
    htmlFor="c1511c73-07b9-44cd-a4bd-01758515acb5"
  >
    Choose File
  </label>
  <div
    className="file-name"
  >
    <p>
      fileName
    </p>
  </div>
  <button
    className="button button--grey button--norm-grey"
    disabled={false}
    onClick={[Function]}
  >
    Upload
  </button>
</form>
`;

exports[`render should render FileUploadForm 1`] = `
<form
  className="file-upload-form"
  onSubmit={[Function]}
>
  <input
    accept=".pdf"
    disabled={false}
    hidden="hidden"
    id="c1511c73-07b9-44cd-a4bd-01758515acb5"
    onChange={[Function]}
    onClick={[Function]}
    type="file"
  />
  <label
    className="button button--grey button--norm-grey"
    htmlFor="c1511c73-07b9-44cd-a4bd-01758515acb5"
  >
    Choose File
  </label>
  <div
    className="file-name"
  >
    <p>
      No file chosen
    </p>
  </div>
  <button
    className="button button--grey button--norm-grey"
    disabled={false}
    onClick={[Function]}
  >
    Upload
  </button>
</form>
`;

exports[`upload form should change button to "Uploading..." during upload 1`] = `
<form
  className="file-upload-form"
  onSubmit={[Function]}
>
  <input
    accept=".pdf"
    disabled={true}
    hidden="hidden"
    id="c1511c73-07b9-44cd-a4bd-01758515acb5"
    onChange={[Function]}
    onClick={[Function]}
    type="file"
  />
  <label
    className="button button--grey button--norm-grey"
    htmlFor="c1511c73-07b9-44cd-a4bd-01758515acb5"
  >
    Choose File
  </label>
  <div
    className="file-name"
  >
    <p>
      No file chosen
    </p>
  </div>
  <button
    className="button button--grey button--norm-grey"
    disabled={true}
    onClick={[Function]}
  >
    Uploading...
  </button>
</form>
`;

exports[`upload form should remove error, set uploading to false and reset input after upload 1`] = `
<form
  className="file-upload-form"
  onSubmit={[Function]}
>
  <input
    accept=".pdf"
    disabled={true}
    hidden="hidden"
    id="c1511c73-07b9-44cd-a4bd-01758515acb5"
    onChange={[Function]}
    onClick={[Function]}
    type="file"
  />
  <label
    className="button button--grey button--norm-grey"
    htmlFor="c1511c73-07b9-44cd-a4bd-01758515acb5"
  >
    Choose File
  </label>
  <div
    className="file-name"
  >
    <p>
      No file chosen
    </p>
  </div>
  <button
    className="button button--grey button--norm-grey"
    disabled={true}
    onClick={[Function]}
  >
    Uploading...
  </button>
</form>
`;
